--- a/css/main.css
+++ b/css/main.css
@@ -54,12 +54,27 @@ body,html{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-#two button{
+#left,#right{
     position: absolute;
-    padding:18px 20px;
+    padding:20px 20px;
+    border-radius: 50%;
+    border:2px solid white;
+    outline:none;
+    background-color: transparent;
+    font-size: 24px;
+    color:white;
+    transition: transform 0.4s ease;
 }
+#left:hover,#right:hover{
+    transform:rotateZ(360deg);
+    border:4px solid white;
+    font-weight: bolder;
+
+}
+
 #left{
     left:0;
     right: 0;
@@ -71,6 +86,13 @@ body,html{
     right:0;
     margin-left: auto;
     margin-right: 20px;
+}
+
+#twoL, #twoR{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 #three{
