--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,15 @@ html {
   margin: 0;
 }
 
+#four{
+  background-color: lightblue;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 @media only screen and (max-width: 500px) {
   #one {
     padding: 0;
