--- a/css/three.css
+++ b/css/three.css
@@ -7,7 +7,7 @@
 }
 #msg{
     font-family: fantasy;
-    font-size: 5em;
+    font-size: 80px;
    
     line-height: 70px;
     position: absolute;
