--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,58 @@ html {
   padding: 0;
   margin: 0;
 }
+.dropbtn {
+  padding: 18px 24px;
+  background-color: darkorange;
+  margin: 20px;
+  box-shadow:0px 3px 0px 0px white, 1px 1px 100px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  text-decoration: none;
+  color: white;
+  transition: transform 0.2s ease;
+  border:none;
+  right:0;
+  margin-right: -100px;
+  margin-top: -100px;
+}
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+  right:0;
+  margin-left: auto;
+  top:0;
+  margin-top:-100px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-right: -100px;
+  margin-top: -100px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: whitesmoke;
+}
 /* ONE FIRST SECTION */
 #one {
   background-color: orange;
@@ -22,7 +73,7 @@ html {
   padding: 200px;
 }
 #one h1 {
-  font-size: 186px;
+  font-size: 146px;
   width: 100%;
   text-align: center;
   padding: 0;
@@ -253,4 +304,10 @@ html {
   .about p{
     font-size: 20px !important;
   }
+   .dropbtn{
+     margin:0;
+   }
+   .dropdown-content{
+     margin:0;
+   }
 }
