--- a/css/main.css
+++ b/css/main.css
@@ -281,6 +281,8 @@ html {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -328,5 +330,8 @@ html {
    }
    .dropdown-content{
      margin:0;
+   }
+   #four h1{
+     font-size: 18px;
    }
 }
