--- a/css/three.css
+++ b/css/three.css
@@ -88,3 +88,22 @@
     top:79%;
     right: -5%;
 }
+
+
+@media only screen and (max-width: 500px){
+    .b1,.b2,.b6{
+        display: none;
+    }
+    #msg{
+        z-index: 100;
+        top: 0;
+        margin:20px;
+    }
+    #btn{
+        top:0;
+        margin-top: 100px;
+    }
+    .block{
+        transform: scale(0.4);
+    }
+}
