--- a/css/three.css
+++ b/css/three.css
@@ -91,7 +91,7 @@
 
 
 @media only screen and (max-width: 500px){
-    .b1,.b2,.b6,.b11{
+    .b1,.b2,.b6,.b11,.b10{
         display: none;
     }
     #msg{
