--- a/css/three.css
+++ b/css/three.css
@@ -98,10 +98,12 @@
         z-index: 100;
         top: 0;
         margin:20px;
+        font-family: Arial, Helvetica, sans-serif;
     }
     #btn{
         top:0;
         margin-top: 100px;
+        font-family: Arial, Helvetica, sans-serif;
     }
     .block{
         transform: scale(0.3);
