--- a/css/three.css
+++ b/css/three.css
@@ -91,7 +91,7 @@
 
 
 @media only screen and (max-width: 500px){
-    .b1,.b2,.b6,.b11,.b10{
+    .b1,.b2,.b6,.b11{
         display: none;
     }
     #msg{
@@ -106,6 +106,6 @@
         font-family: Arial, Helvetica, sans-serif;
     }
     .block{
-        transform: scale(0.3);
+        transform: scale(0.5)  rotateX(55deg) rotateY(0deg) rotateZ(45deg);
     }
 }
