--- a/css/three.css
+++ b/css/three.css
@@ -98,12 +98,12 @@
         z-index: 100;
         top: 0;
         margin:20px;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Times New Roman', Times, serif;
     }
     #btn{
         top:0;
         margin-top: 100px;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Times New Roman', Times, serif;
     }
     .block{
         transform: scale(0.5)  rotateX(55deg) rotateY(0deg) rotateZ(45deg);
