--- a/css/main.css
+++ b/css/main.css
@@ -14,24 +14,24 @@ html {
   padding: 18px 24px;
   background-color: darkorange;
   margin: 20px;
-  box-shadow:0px 3px 0px 0px white, 1px 1px 100px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 3px 0px 0px white, 1px 1px 100px 5px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
   text-decoration: none;
   color: white;
   transition: transform 0.2s ease;
-  border:none;
-  right:0;
-  margin-right: -100px;
+  border: none;
+  right: 0;
+  margin-right: -80px;
   margin-top: -100px;
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
-  right:0;
+  right: 0;
   margin-left: auto;
-  top:0;
-  margin-top:-100px;
+  top: 0;
+  margin-top: -100px;
 }
 
 .dropdown-content {
@@ -40,7 +40,7 @@ html {
   right: 0;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   margin-right: -100px;
   margin-top: -100px;
@@ -53,7 +53,9 @@ html {
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -122,11 +124,15 @@ html {
   align-items: center;
   flex-wrap: wrap;
 }
-@keyframes bounce{
-  0% {margin-top: -20px;}
-  50% {margin-top: 0px;}
+@keyframes bounce {
+  0% {
+    margin-top: 40px;
+  }
+  50% {
+    margin-top: 15px;
+  }
   100% {
-    margin-top: -20px;
+    margin-top: 40px;
   }
 }
 /* left and right buttons */
@@ -222,59 +228,57 @@ html {
   padding: 0;
   margin: 0;
 }
-.about{
+.about {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
-@keyframes rotate{
-  from{transform:rotateZ(180deg)}
-  to{
+@keyframes rotate {
+  from {
+    transform: rotateZ(180deg);
+  }
+  to {
     transform: rotateZ(0deg);
-  } 
+  }
 }
-.imgwrap{
+.imgwrap {
   overflow: hidden;
   height: 300px;
   width: 300px;
   overflow: hidden;
   border-radius: 50%;
   transition: transform 0.3s ease;
-  border:3px solid white;
+  border: 3px solid white;
   animation: rotate ease-in;
 }
 
-.about img{
+.about img {
   border-radius: 50%;
   height: 300px;
-  width:300px;
+  width: 300px;
   object-fit: cover;
   transition: transform 0.3s ease;
-  
 }
-.about img:hover{
+.about img:hover {
   transform: scale(1.3);
-
 }
-.imgwrap:hover{
+.imgwrap:hover {
   transform: rotateZ(360deg);
 }
-.about h2{
+.about h2 {
   width: 100% !important;
   text-shadow: none !important;
-  font-size: 48px!important;
-  
+  font-size: 48px !important;
 }
-.about p{
-  width:50%;
+.about p {
+  width: 50%;
   font-size: 26px;
   text-align: center;
   padding: 40px;
-  
 }
 
-#four{
+#four {
   background-color: lightblue;
   color: white;
   display: flex;
@@ -292,7 +296,10 @@ html {
     padding-bottom: 200px;
   }
   #one h1 {
-    font-size: 72px;
+    font-size: 36px;
+  }
+  #one h2 {
+    font-size: 20px;
   }
 
   #twoL h1 {
@@ -301,11 +308,11 @@ html {
   #twoL h2 {
     font-size: 18px;
   }
-  #twoR h1{
-      font-size: 48px;
+  #twoR h1 {
+    font-size: 48px;
   }
-  #two{
-    padding-bottom:50px;
+  #two {
+    padding-bottom: 50px;
     padding-top: 30px;
   }
   #left,
@@ -314,28 +321,34 @@ html {
   #bL {
     transform: scale(0.5);
   }
-  .about img{
-    height:150px;
-    width:150px;
+  .about img {
+    height: 150px;
+    width: 150px;
   }
-  .imgwrap{
-    height:150px;
-    width:150px;
+  .imgwrap {
+    height: 150px;
+    width: 150px;
   }
-  .about h2{
+  .about h2 {
     font-size: 23px !important;
     margin-top: 20px;
   }
-  .about p{
+  .about p {
     font-size: 20px !important;
   }
-   .dropbtn{
-     margin:0;
-   }
-   .dropdown-content{
-     margin:0;
-   }
-   #four h1{
-     font-size: 18px;
-   }
+  .dropbtn {
+   position: absolute;
+   width:150px;
+   left:50%;
+  }
+  .dropdown-content {
+    position: absolute;
+    width:150px;
+    margin-top: -20px;
+    margin-left: 20px;
+    left:100%;
+  }
+  #four h1 {
+    font-size: 18px;
+  }
 }
